--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>FIRST NAME, LAST NAME, Project 5 — Animation</title>
+   <title>Mohamed, Traore, Project 5 — Animation</title>
    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   <h1>YOUR ANIMATION NAME HERE</h1>
-   <h2>YOUR NAME HERE</h2>
+   <h1>* Night Sky *</h1>
+   <h2>Mohamed Traore</h2>
    <div id="animation"></div>
 </body>
 </html>
